# scanner_project

./: CMakeLists.txt  README.md
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/include/scanner_core/: csv_loader.h  md5.h  scanner.h
src/core/src/: csv_loader.cpp  md5.cpp  scanner.cpp
tests/: CMakeLists.txt  test_core.cpp
